# s0nar-program

./: Anchor.toml  README.md  package-lock.json
.github/workflows/: checks.yml
migrations/: deploy.ts
programs/neutron-program/: Cargo.toml
programs/neutron-program/src/: error.rs  lib.rs  utils.rs
programs/neutron-program/src/instructions/: crank_aggregation.rs  deregister_observer.rs  initialize.rs  mod.rs  register_observer.rs  submit_attestation.rs  update_config.rs
programs/neutron-program/src/state/: mod.rs
programs/neutron-program/src/tests/: mod.rs
programs/s0nar-program/: Cargo.toml
programs/s0nar-program/src/: constants.rs  error.rs  events.rs  lib.rs  utils.rs
programs/s0nar-program/src/instructions/: crank_aggregation.rs  deregister_observer.rs  initialize.rs  mod.rs  register_observer.rs  slash_observer.rs  submit_attestation.rs  transfer_authority.rs  update_config.rs
programs/s0nar-program/src/state/: mod.rs
programs/s0nar-program/src/tests/: mod.rs
tests/: neutron-program.ts  s0nar-program.ts
