[package]
name = "neutron-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neutron_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
litesvm = "0.9.1"
solana-sdk = "3.0.0"
solana-instruction = "3.1"
solana-keypair = "3.1"
solana-native-token = "3.0"
solana-pubkey = "3.0"
solana-signer = "3.0"
solana-transaction = "3.0"
solana-message = "3.0"
solana-sdk-ids = "3.1"
solana-address = "2.0"
solana-account = "3.3"
solana-transaction-error = "3.0"
solana-clock = "3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
